--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </body>
 
                            <!--ÖNEMLİ !!!
-       Ödevi ; konularda biraz geride kaldığım ve ödevi yetiştiremediğim için
+       Bu projede ; konularda biraz geride kaldığım ve ödevi yetiştiremediğim için
        Kodların çoğunu arkadaşım Ahmet Enes Özsaraç'ın Projesinden aldım ,
                 kaynak kodlar bana ait değildir. -->
 
