--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="btn" id="t1NameEdit" onclick="t1NameChange()">
         Goril Değiştir
       </button>
-      <button class="btn" onclick="t1Increase()">+</button>
+      <button class="btn" onclick="t1Increase()">Point</button>
       <button class="btn" onclick="t1Decrease()">-</button>
     </div>
 
@@ -27,7 +27,7 @@
       <button class="btn" id="t2NameEdit" onclick="t2NameChange()">
         Goril Değiştir
       </button>
-      <button class="btn" onclick="t2Increase()">+</button>
+      <button class="btn" onclick="t2Increase()">Point</button>
       <button class="btn" onclick="t2Decrease()">-</button>
     </div>
 
